@startuml

title __APP's Class Diagram__\n

  namespace com.cleanupBN.todoc {
    class com.cleanupBN.todoc.BuildConfig {
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace bdd {
      abstract class com.cleanupBN.todoc.bdd.MyAppDatabase {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace bdd {
      class com.cleanupBN.todoc.bdd.MyAppDatabase_Impl {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace bdd {
      interface com.cleanupBN.todoc.bdd.MyDao {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace bdd {
      class com.cleanupBN.todoc.bdd.MyDao_Impl {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace model {
      class com.cleanupBN.todoc.model.Project {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace model {
      class com.cleanupBN.todoc.model.Task {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace ui {
      class com.cleanupBN.todoc.ui.MainActivity {
      }
    }
  }
  

  namespace com.cleanupBN.todoc {
    namespace ui {
      class com.cleanupBN.todoc.ui.TasksAdapter {
      }
    }
  }
  

  com.cleanupBN.todoc.bdd.MyAppDatabase -up-|> androidx.room.RoomDatabase
  com.cleanupBN.todoc.bdd.MyAppDatabase_Impl -up-|> com.cleanupBN.todoc.bdd.MyAppDatabase
  com.cleanupBN.todoc.bdd.MyAppDatabase_Impl o-- com.cleanupBN.todoc.bdd.MyDao : _myDao
  com.cleanupBN.todoc.bdd.MyDao_Impl .up.|> com.cleanupBN.todoc.bdd.MyDao
  com.cleanupBN.todoc.ui.MainActivity .up.|> com.cleanupBN.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanupBN.todoc.ui.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cleanupBN.todoc.ui.MainActivity o-- com.cleanupBN.todoc.ui.TasksAdapter : adapter
  com.cleanupBN.todoc.ui.MainActivity o-- com.cleanupBN.todoc.ui.MainActivity.SortMethod : sortMethod
  com.cleanupBN.todoc.ui.TasksAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.cleanupBN.todoc.ui.TasksAdapter o-- com.cleanupBN.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
